Fix dynamic class loader and finish connecting to frontend